pxc/tests/test_048_downcast/dc2.px
namespace dc2;
import common -;
import pointer -;

struct foo {
  function int f(int x) { return x * 2; }
}

struct bar {
}

function void t1()
{
  foo f;
  bar mutable& b = downcast_mutable{bar, foo}(f);
    // error: polymorphic type expected
}

t1();

